# ansible.role.prep

./: .ansible-lint  .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .venv  LICENSE  README.md  makefile  pyproject.toml  test-config.yaml
.github/: copilot-instructions.md  pull_request_template.md  settings.yml
.github/workflows/: validation.yml
docs/: conf.py  deployment.md  index.md  project-structure.md  src.md
docs/_static/: custom.css
docs/_templates/: .gitkeep
docs/src/: helpers.md  library.md  tests.md
helpers/: aws_resource_model.py  cfn_builder.py
meta/: main.yml
tasks/: main.yml
tests/: __init__.py
tests/fixtures/: always_fails.py  aws_model_no_return.py  aws_model_test.py  cfn_builder_custom_filter.py  cfn_builder_custom_init.py  cfn_builder_error.py  cfn_builder_new_template.py  cfn_builder_test.py  failing_package_init.py  simple_test.py
tests/helpers/: .gitkeep  conftest.py  test_aws_resource_model.py  test_cfn_builder.py
